--- a/app/src/main/assets/www/views/html.html
+++ b/app/src/main/assets/www/views/html.html
@@ -7,54 +7,65 @@
 </head>
 
 <body>
-    <div class="story">
-        <div class="stage">
-            <div class="stage-content" style="background: url(img/bg.jpg);background-size: 100% 100%;">
-                <div class="symbol" style="z-index: 2;" >
-                    <img class="img" data-name="img1" style="" src="img/icon-earth.png" />
-                </div>
-                <div class="symbol" style="z-index: 3;" >
-                    <div class="pages-txt" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the classic translation corpus, the combination of network technology and language essence</div>
-                </div>
+<div class="story">
+    <div class="stage-content edit-area pages-img"
+         style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: 100% 100%;width:100%;height:100%;">
+        <div class="symbol" style="z-index: 2;">
+            <div class="pages-img edit-area"><img data-name="img1" style=""
+                                                  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/>
             </div>
         </div>
-        <div class="stage">
-            <div class="stage-content">
-                <div class="symbol" style="z-index: 2;" >
-                    <img class="img" data-name="img1" style="width: 542px;height: 660px;" src="img/img1.jpg?type=stage&amp;id=78" />
-                </div>
-                <div class="symbol" style="z-index: 3">
-                    <img class="img" style="width: 130px;height: 130px;" src="img/bg-post.png?type=stage&amp;id=78" />
-                </div>
-                <div class="symbol" style="z-index: 4" >
-                    <img class="img" data-name="img2" style="width: 115px;height: 116px;" src="img/img2.jpg?type=stage&amp;id=78" />
-                </div>
-                <div class="symbol" style="width: 542px;height: 52px;top: 731px;left: 50px;" >
-                    <div class="text" data-name="text1" style="font-family: ArchitectsDaughter;font-size: 32px;color:#773f05;text-align: left;line-height: 52px;">
-                        MESSAGE:
-                    </div>
-                </div>
+        <div class="symbol" style="z-index: 3;">
+            <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c
+                update of the classictranslation corpus, the combination of network technology and language essence
             </div>
         </div>
-        <div class="stage">
-            <div class="stage-content">
-                <div class="symbol" style="z-index: 2;" >
-                    <img class="img" data-name="img1" style="width: 542px;height: 660px;" src="img/img1.jpg?type=stage&amp;id=78" />
-                </div>
-                <div class="symbol" style="z-index: 3">
-                    <img class="img" style="width: 130px;height: 130px;" src="img/bg-post.png?type=stage&amp;id=78" />
-                </div>
-                <div class="symbol" style="z-index: 4" >
-                    <img class="img" data-name="img2" style="width: 115px;height: 116px;" src="img/img2.jpg?type=stage&amp;id=78" />
-                </div>
-                <div class="symbol" style="width: 542px;height: 52px;top: 731px;left: 50px;" >
-                    <div class="text" data-name="text1" style="font-family: ArchitectsDaughter;font-size: 32px;color:#773f05;text-align: left;line-height: 52px;">
-                        MESSAGE:
-                    </div>
+    </div>
+</div>
+
+<div class="stage">
+        <div class="stage-content">
+            <div class="symbol" style="z-index: 2;">
+                <img class="img" data-name="img1" style="width: 542px;height: 660px;"
+                     src="img/img1.jpg?type=stage&amp;id=78"/>
+            </div>
+            <div class="symbol" style="z-index: 3">
+                <img class="img" style="width: 130px;height: 130px;" src="img/bg-post.png?type=stage&amp;id=78"/>
+            </div>
+            <div class="symbol" style="z-index: 4">
+                <img class="img" data-name="img2" style="width: 115px;height: 116px;"
+                     src="img/img2.jpg?type=stage&amp;id=78"/>
+            </div>
+            <div class="symbol" style="width: 542px;height: 52px;top: 731px;left: 50px;">
+                <div class="text" data-name="text1"
+                     style="font-family: ArchitectsDaughter;font-size: 32px;color:#773f05;text-align: left;line-height: 52px;">
+                    MESSAGE:
                 </div>
             </div>
         </div>
     </div>
+    <div class="stage">
+        <div class="stage-content">
+            <div class="symbol" style="z-index: 2;">
+                <img class="img" data-name="img1" style="width: 542px;height: 660px;"
+                     src="img/img1.jpg?type=stage&amp;id=78"/>
+            </div>
+            <div class="symbol" style="z-index: 3">
+                <img class="img" style="width: 130px;height: 130px;" src="img/bg-post.png?type=stage&amp;id=78"/>
+            </div>
+            <div class="symbol" style="z-index: 4">
+                <img class="img" data-name="img2" style="width: 115px;height: 116px;"
+                     src="img/img2.jpg?type=stage&amp;id=78"/>
+            </div>
+            <div class="symbol" style="width: 542px;height: 52px;top: 731px;left: 50px;">
+                <div class="text" data-name="text1"
+                     style="font-family: ArchitectsDaughter;font-size: 32px;color:#773f05;text-align: left;line-height: 52px;">
+                    MESSAGE:
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
 
