--- a/app/src/main/assets/www/public/css/editor_index.css
+++ b/app/src/main/assets/www/public/css/editor_index.css
@@ -12,6 +12,7 @@ body{
     font-family: Helvetica;
 }
 *:focus {outline: none;}
+a {text-decoration: none;color:inherit;}
 .text-black{
     color: #000000;
 }
@@ -129,6 +130,12 @@ body{
 .icon-logo{
     background-image: url(../img/logo.png);
 }
+.icon-enter-from-bottom {
+    background-image: url(../img/enter-from-bottom.png);
+}
+.icon-enter-from-bottom.active {
+    background-image: url(../img/enter-from-bottom-active.png);
+}
 .header{
     height: 48px;line-height: 48px;
 }
@@ -184,17 +191,14 @@ body{
 .tpl-page-item-name {font-size:14px;color:#fff;font-weight:bold;background-color:rgba(0,0,0,0.4);padding:5px 0;text-align: center;position: absolute;bottom:0;width:70px;left:0;}
 .tpl-page-item .icon-download {display:block;width:20px;height:20px;position: absolute;bottom:35px;right:5px;}
 .tpl-page-item .download-progress-bar { position: absolute; left: 5px; bottom: 35px;}
+.tpl-page-item.active {border:1px solid #bbb;}
 
 .pages {width:100%;padding:15px 0;height:310px;position:relative;overflow: hidden;}
 .pages li {width:200px;height:280px;float:left;position: relative;margin-left:15px;opacity: 0.5;}
 .pages li.active  {opacity: 1}
-.pages li.active .icon-edit-pic {display: block}
-.pages li.active .pages-txt {border:1px dashed #ffe400;border-radius:5px;}
+.pages li .pages-txt.active {border:1px dashed #ffe400;border-radius:5px;}
 .pages-item .count {position: absolute;left:0;bottom:0;background:rgba(82,181,2,0.5);color:#fff;font-size:14px;padding:2px 6px;}
 .pages-item .pages-item-thumb {width:100%;}
-.pages-item  .icon-edit-pic {background-image: url(../img/icon-edit-pic.png);width:36px;height:36px;display: none;position: absolute;right: 10px;top:10px;}
-.editable .icon-edit-pic {display: block}
-.editable .pages-txt {border:1px dashed #ffe400;border-radius:5px;}
 
 .story-page-list {width:100%;overflow: hidden}
 .story-page-list .icon-correct {
@@ -256,8 +260,9 @@ body{
 .color-sub .color-sub-item.selected i {display: inline-block}
 
 .pop-editer-animation .bd {padding:10px;}
-.pop-editer-animation .anim-item {width:25%;display: inline-block;}
-
+.pop-editer-animation .anim-item {width:20%;display: inline-block;float:left;text-align: center;}
+.pop-editer-animation .anim-item i {display: inline-block;width:30px;height:30px;background-size: 100% 100%;border-radius: 30px;border:1px solid #ddd;}
+.pop-editer-animation .anim-item .anim-name {padding:5px 0;display: block;color:#999;}
 .icon-add-stage {width:60px;height:60px;position: fixed;bottom:20px;right:20px;z-index: 9999;}
 
 .ui-dialog{
@@ -315,6 +320,13 @@ body{
 .stage-content .symbol {transform: scale(0.8);}
 .stage { border-radius: 5px;overflow: hidden;}
 #editorText .pages {width:80%;margin:0 10%;}
+.stage-content .symbol {transform: scale(0.8);}
+.stage-content .edit-area {display:inline-block;position: relative;}
+.edit-area .ico-acitve {display: none;background-image: url(../img/icon-edit-pic.png);width:36px;height:36px;position: absolute;;top:0;right:0;background-size: 100% 100%;}
+.pages-txt.edit-area.active {border:1px dashed #ffe400;border-radius:5px;}
+.edit-area.active>.ico-acitve {display: block;}
+
+
 
 
 
