--- a/app/src/main/assets/www/views/editor_image.html
+++ b/app/src/main/assets/www/views/editor_image.html
@@ -1,6 +1,6 @@
 <div class="header">
     <div class="pull-left">
-        <a class="icon-arrow-left" ng-click="showView('editorImage','mainHtml')"></a><span class="tit">Edit Image</span>
+        <a class="icon-arrow-left" onclick="WisapeEditer.showView('editorImage','mainHtml')"></a><span class="tit">Edit Image</span>
     </div>
     <div class="pull-right">
         <!--图片元件图片选择入口-->
