--- a/app/src/main/assets/www/views/index.html
+++ b/app/src/main/assets/www/views/index.html
@@ -1,45 +1,256 @@
 <html ng-app='WisapePlayer'>
 <head  >
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+    <meta name="format-detection"content="telephone=no, email=no" />
     <meta name="format-detection" content="telephone=no"/>
     <link href="../public/css/reset.css" rel="stylesheet"/>
     <link href="../public/css/layout.css" rel="stylesheet"/>
     <link href="../public/css/font.css" rel="stylesheet"/>
-    <link href="../cs/public/css/animation.css" rel="stylesheet"/>
+    <link href="../cs/animation/animation.css" rel="stylesheet"/>
     <link href="../public/css/editor_index.css" rel="stylesheet"/>
-    <link href="../public/css/stageSelct.css" rel="stylesheet"/>
 </head>
 <body>
-<!--Story加载区-->
-<story style="display: none">
-    <button onclick="test(['test','test2']);">Test</button>
-    <button onclick="getStageCategory();">getStageCategory</button>
-    <button onclick="getStageList(1);">getStageList</button>
-    <button onclick="start(59,2);">Start</button>
-    <button onclick="read('/storage/sdcard0/wisape/com.wisape.android/data/template/mingpian02/stage.html');">read</button>
-    <div id="message"></div>
-    <img src="http://www.baidu.com/img/baidu_jgylogo3.gif"/>
-</story>
-<div ng-controller='MainCtrl'>
 
-    <div id="mainHtml"  style="display: block"  ng-include="mainHtmlUrl" ng-controller="EditerIndexCtrl"></div>
-    <div id="storyStageList" style="display: none"  ng-include="'story_stage_list.html'"></div>
-    <div id="editorText" style="display: none"  ng-include="'editor_text.html'"  ng-controller="EditerTextCtrl"></div>
-    <div id="editorImage" style="display: none"  ng-include="'editor_image.html'"></div>
+
+<div id="main" class="page">
+    <div class="header">
+        <div class="pull-left">
+            <a class="icon-arrow-left"></a>
+        </div>
+        <div class="pull-right">
+            <ul class="list-inline">
+                <li><a class="icon-play"></a></li>
+                <li><a class="icon-layout" id="toggleCat" ></a></li>
+                <li><a class="icon-list" onclick="WisapeEditer.ShowView('main','storyStageList')"></a></li>
+                <li><a class="icon-settings" onclick="setting(1);"></a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="tpl-page-cat">
+        <div class="hd" id="menu-scroll" >
+        </div>
+        <div class="bd" id="cat-scroll">
+        </div>
+
+    </div>
+    <div class="pages" id="pages-scroll" >
+        <ul>
+            <li class="active">
+                <div class="stage-content edit-area pages-img" style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: 100% 100%;width:100%;height:100%;">
+                    <div class="symbol" style="z-index: 2;">
+                        <div class="pages-img edit-area">
+                            <img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/>
+                        </div>
+                    </div>
+                    <div class="symbol" style="z-index: 3;">
+                        <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c
+                            update of the classictranslation corpus, the combination of network technology and language essence
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <span class="icon-add-stage" id="AddNewStage"></span>
+</div>
+
+<div id="editorText" style="display: none">
+    <div class="header">
+        <div class="pull-left">
+            <a class="icon-arrow-left backToMain" ></a>
+            <span class="tit">Edit Text</span>
+        </div>
+        <div class="pull-right">
+            <ul class="list-inline">
+                <li><a class="icon-pencil" id="TextEditerOpt"></a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="pages editable">
+        <div class="tpl-item" style="background: url(../public/img/temp/stage_example.jpg);background-size: 100% 100%;">
+            <div id="test" class="pages-txt selected" contenteditable="true" style="margin:70px auto;width:150px;color:#fff;text-align: left;background:rgba(0,0,0,0.5);">As c update of the classic translation corpus, the combination of network technology and language essence</div>
+        </div>
+    </div>
+    <div class="pop-layer pop-editer-opt" style="display: none">
+        <div class="hd">
+            <i class="icon-bold" id="setFontWeight" ></i>
+            <i class="icon-italic" id="setFontStyle"></i>
+            <i class="icon-hyperlink" id="setFontLink"></i>
+            <i class="icon-align-left" id="setFontAlign"></i>
+        </div>
+        <div class="bd opts">
+            <div class="item" data-name="pop-editer-color"><span class="opt-name">Color</span><span class="opt-right"><span class="opt-val-color" style="background-color: #fff"></span><i class="icon-arrow-right-list"></i></span></div>
+            <div class="item" data-name="pop-editer-font"><span class="opt-name">Font</span><span class="opt-right"><span class="opt-val">Hevele</span><i class="icon-arrow-right-list"></i></span></div>
+            <div class="item" data-name="pop-editer-animation"><span class="opt-name">Animation</span><span class="opt-right"><span class="opt-val">Animation1</span><i class="icon-arrow-right-list"></i></span></div>
+        </div>
+    </div>
+
+    <div class="pop-layer pop-editer-font" style="display: none">
+        <div class="hd">
+            <i class="icon-arrow-left backPopLayerOpt"></i>
+            <span class="tit">Font Selection</span>
+        </div>
+        <div class="bd opts">
+            <div class="item"><span class="opt-name">Font1</span><span class="opt-right"><i class="icon-correct"></i></span></div>
+            <div class="item"><span class="opt-name">Font2</span><span class="opt-right"><i class="icon-download"></i></span></div>
+            <div class="item"><span class="opt-name">Font2</span><span class="opt-right"><div class="download-progress-bar"><div class="download-progress-percent" style="width:50%;"></div></div></span></div>
+            <div class="item"><span class="opt-name">Font2</span><span class="opt-right"><i class="icon-download"></i></span></div>
+            <div class="item"><span class="opt-name">Font2</span><span class="opt-right"><i class="icon-download"></i></span></div>
+            <div class="item"><span class="opt-name">Font2</span><span class="opt-right"><i class="icon-download"></i></span></div>
+            <div class="item"><span class="opt-name">Font2</span><span class="opt-right"><i class="icon-download"></i></span></div>
+        </div>
+    </div>
+
+    <div class="pop-layer pop-editer-animation" style="display: none">
+        <div class="hd">
+            <i class="icon-arrow-left backPopLayerOpt"></i>
+            <span class="tit">Animation</span>
+        </div>
+        <div class="bd">
+            <span class="anim-item"><i class="icon-enter-from-bottom"></i><span class="anim-name">dsfadfs</span></span>
+            <span class="anim-item"><i class="icon-enter-from-bottom"></i><span class="anim-name">dsfadfs</span></span>
+            <span class="anim-item"><i class="icon-enter-from-bottom"></i><span class="anim-name">dsfadfs</span></span>
+            <span class="anim-item"><i class="icon-enter-from-bottom"></i><span class="anim-name">dsfadfs</span></span>
+            <span class="anim-item"><i class="icon-enter-from-bottom"></i><span class="anim-name">dsfadfs</span></span>
+            <span class="anim-item"><i class="icon-enter-from-bottom"></i><span class="anim-name">dsfadfs</span></span>
+            <span class="anim-item"><i class="icon-enter-from-bottom"></i><span class="anim-name">dsfadfs</span></span>
+            <span class="anim-item"><i class="icon-enter-from-bottom"></i><span class="anim-name">dsfadfs</span></span>
+            <span class="anim-item"><i class="icon-enter-from-bottom"></i><span class="anim-name">dsfadfs</span></span>
+            <span class="anim-item"><i class="icon-enter-from-bottom"></i><span class="anim-name">dsfadfs</span></span>
+        </div>
+    </div>
+
+    <div class="pop-layer pop-editer-color" style="display: none">
+        <div class="hd">
+            <i class="icon-arrow-left backPopLayerOpt"></i>
+            <span class="tit">Color</span>
+        </div>
+        <div class="bd" id="color-box">
+            <div class="color-main">
+                <span class="color-main-item active"></span>
+                <span class="color-main-item"></span>
+                <span class="color-main-item"></span>
+                <span class="color-main-item"></span>
+                <span class="color-main-item"></span>
+                <span class="color-main-item"></span>
+                <span class="color-main-item"></span>
+                <span class="color-main-item"></span>
+                <span class="color-main-item"></span>
+                <span class="color-main-item"></span>
+            </div>
+            <div class="color-sub">
+                <span class="color-sub-item"><i></i></span>
+                <span class="color-sub-item"><i></i></span>
+                <span class="color-sub-item"><i></i></span>
+                <span class="color-sub-item"><i></i></span>
+                <span class="color-sub-item"><i></i></span>
+                <span class="color-sub-item"><i></i></span>
+                <span class="color-sub-item"><i></i></span>
+                <span class="color-sub-item"><i></i></span>
+            </div>
+        </div>
+    </div>
+
+    <div class="ui-mask" style="display: none; width: 100%; height: 671px;"></div>
+    <div class="ui-dialog href-dialog" style="width: 300px; height: 200px; display: none; left: 50%; margin-left: -150px; top: 50%; margin-top: -100px;">
+        <div class="ui-dialog-title">Set Destination</div>
+        <div class="ui-dialog-content">
+            <div class="input-href">
+                <input type="text" value="http://"/>
+            </div>
+        </div>
+        <div class="ui-dialog-btns">
+            <a class="ui-btn btn-cancle">Cancle</a>
+            <a class="ui-btn btn-submit">Confirm</a>
+        </div>
+    </div>
+
+</div>
+
+<div id="editorImage" style="display: none">
+    <div class="header">
+        <div class="pull-left">
+            <a class="icon-arrow-left" onclick="WisapeEditer.ShowView('editorImage','main')"></a><span class="tit">Edit Image</span>
+        </div>
+        <div class="pull-right">
+            <!--图片元件图片选择入口-->
+            <a class="imgIco-edit-image"></a>
+        </div>
+    </div>
+    <!--图片操作区域-->
+    <div id="cropper">
+        <div class="crop-area">
+            <img />
+        </div>
+    </div>
+</div>
+
+<div id="storyStageList" style="display: none">
+    <div class="header">
+        <div class="pull-left">
+            <a class="icon-arrow-left"  onclick="WisapeEditer.ShowView('storyStageList','main')"></a>
+            <span class="tit">Page List</span>
+        </div>
+        <div class="pull-right">
+            <ul class="list-inline">
+                <li><a class="icon-dustbin" id="pageDel"></a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="story-page-list" >
+        <ul id="storyDragBox">
+            <li class="tpl-page-item">
+                <img class="stage-thumb" src="../public/img/temp/stage_example.jpg" alt="">
+                <i class="icon-correct"></i>
+            </li>
+            <li class="tpl-page-item">
+                <img class="stage-thumb" src="../public/img/temp/stage_example2.png" alt="">
+                <i class="icon-correct"></i>
+            </li>
+            <li class="tpl-page-item">
+                <img class="stage-thumb" src="../public/img/temp/stage_example.jpg" alt="">
+                <i class="icon-correct"></i>
+            </li>
+            <li class="tpl-page-item">
+                <img class="stage-thumb" src="../public/img/temp/stage_example2.png" alt="">
+                <i class="icon-correct"></i>
+            </li>
+            <li class="tpl-page-item">
+                <img class="stage-thumb" src="../public/img/temp/stage_example.jpg" alt="">
+                <i class="icon-correct"></i>
+            </li>
+            <li class="tpl-page-item">
+                <img class="stage-thumb" src="../public/img/temp/stage_example2.png" alt="">
+                <i class="icon-correct"></i>
+            </li>
+            <li class="tpl-page-item">
+                <img class="stage-thumb" src="../public/img/temp/stage_example.jpg" alt="">
+                <i class="icon-correct"></i>
+            </li>
+            <li class="tpl-page-item">
+                <img class="stage-thumb" src="../public/img/temp/stage_example2.png" alt="">
+                <i class="icon-correct"></i>
+            </li>
+        </ul>
+    </div>
+
 </div>
 
 
+
+
+
 <script src="../public/js/cordova.js"></script>
-<script src="../public/js/class.js"></script>
 <script src="../public/js/jquery2.1.4.min.js"></script>
-<script src="../public/js/angular.min.js"></script>
+
+<script src="../public/js/template.js"></script>
 <script src="../public/js/hammer.min.js"></script>
 <script src="../public/js/iscroll-lite.js"></script>
 <script src="../public/js/animation.js"></script>
 
 <script src="../public/js/app-main.js"></script>
 <script src="../public/js/common.js"></script>
-
 <script src="../public/js/Sortable.js"></script>
 <script type="text/javascript">
         function test(args){
@@ -137,6 +348,64 @@
         }
 
 
+    </script>
+
+    <script>
+        $(function(){
+            var ColorArr = [
+                ["#000000", "#444444", "#999999", "#999999", "#b7b7b7", "#d9d9d9", "#d9d9d9", "#ffffff"],
+                ["#5b0f01", "#85200c", "#a61c00", "#980000", "#cccccc", "#cc4025", "#e7b8b0", "#ffffff"],
+                ["#660000", "#990100", "#cc0001", "#fe0000", "#e06665", "#e99998", "#f4cccc", "#ffffff"],
+                ["#773f04", "#b45f05", "#e69137", "#fe9900", "#f6b26b", "#f9ca9c", "#fbe5cd", "#ffffff"],
+                ["#7e6000", "#bf9100", "#f1c332", "#ffff00", "#fed966", "#ffe59a", "#fff2cd", "#ffffff"],
+                ["#274f13", "#37761d", "#69a84f", "#00ff01", "#92c47d", "#b6d7a8", "#d8ead2", "#ffffff"],
+                ["#0c343c", "#144f5d", "#46818f", "#00ffff", "#76a5af", "#a2c3c8", "#d1e0e3", "#ffffff"],
+                ["#1c4587", "#1055cc", "#3c78d8", "#4a86e8", "#6d9eeb", "#a4c2f4", "#c9daf8", "#ffffff"],
+                ["#073863", "#0c5395", "#3e85c7", "#0000fe", "#6fa8dd", "#9fc5e9", "#cfe2f3", "#ffffff"],
+                ["#20124d", "#351d75", "#674fa7", "#9a00ff", "#8d7cc2", "#b4a7d5", "#dad2e9", "#ffffff"]
+            ];
+
+            var $colorSub = $(".color-sub");
+            var $colorMain = $(".color-main");
+            $colorMain.find(".color-main-item").each(function(i){
+                var color = ColorArr[i][3];
+                $(this).css({"background-color":color});
+            });
+            $colorMain.find("span").click(function(){
+                ChangeSubColor($(this).index());
+                $colorSub.find("span").removeClass("selected");
+            }).eq(0).trigger("click");
+            $colorSub.find("span").click(function(){
+                var color = $(this).attr("data-color");
+                $(this).addClass("selected").siblings().removeClass("selected");
+                $("#editorText .pages-txt.active,#editorText .pages-txt.active a").css({"color":color});
+                $("#editorText .opt-val-color").css({"background-color":color});
+            });
+
+            function ChangeSubColor (i) {
+                $colorSub.find(".color-sub-item").each(function(j){
+                    var me = $(this);
+                    var color = ColorArr[i][j];
+                    me.css({"background-color":color}).attr({"data-color": color});
+                })
+            }
+
+
+            Sortable.create(storyDragBox, {
+                group: "words",
+                animation: 150,
+                onAdd: function (evt){ console.log('onAdd.bar:', evt.item); },
+                onUpdate: function (evt){ console.log('onUpdate.bar:', evt.item); },
+                onRemove: function (evt){ console.log('onRemove.bar:', evt.item); },
+                onStart:function(evt){ console.log('onStart.foo:', evt.item);console.info("evt:");console.info(evt);$(evt.item).addClass("selected").siblings().removeClass("selected")},
+                onEnd: function(evt){ console.log('onEnd.foo:', evt.item);},
+            });
+
+            $("#pageDel").click(function(){
+                $("#storyDragBox li.selected").remove();
+            })
+
+        })
     </script>
 </body>
 </html>
