--- a/app/src/main/assets/www/views/index.html
+++ b/app/src/main/assets/www/views/index.html
@@ -242,6 +242,7 @@
 
 
 <script src="../public/js/cordova.js"></script>
+<script type="text/javascript" charset="utf-8" src="cordova.file.js"></script>
 <script src="../public/js/jquery2.1.4.min.js"></script>
 
 <script src="../public/js/template.js"></script>
