--- a/app/src/main/assets/www/views/editor_index2.html
+++ b/app/src/main/assets/www/views/editor_index2.html
@@ -43,6 +43,7 @@ xx
         <button onclick="getStageList(1);">getStageList</button>
         <button onclick="start(59);">Start</button>
         <button onclick="read('dddddddddddd');">read</button>
+        <button onclick="getFont();">getFonts</button>
         <div id="message"></div>
         <img src="http://www.baidu.com/img/baidu_jgylogo3.gif"/>
     </story>
