修改字体缩略图没值的bug

--- a/app/src/main/assets/www/views/editor_index2.html
+++ b/app/src/main/assets/www/views/editor_index2.html
@@ -140,6 +140,14 @@ xx
         function showMessage(message){
             jQuery("#message").text(message);
         }
+
+        function getFont(){
+            cordova.exec(function(retval) {
+                showMessage(retval);
+            }, function(e) {
+                alert("Error: "+e);
+            }, "StoryTemplate", "getFonts", []);
+        }
     </script>
 </body>
 </html>
